prevent text flowing outisde of the bow on small screens

--- a/src/modules/pos/validator/components/ValidatorProfile/ValidatorProfile.css
+++ b/src/modules/pos/validator/components/ValidatorProfile/ValidatorProfile.css
@@ -246,6 +246,7 @@
 
           & .rewardContainer {
             width: 100%;
+            white-space: pre;
           }
 
           & .separator {
